--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "three": "^0.170.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
